# geoips-aviris-ng

./: .gitignore  =67  README.md  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: doc-test.yaml  lint.yaml  proper-release-note-edits.yaml
docs/source/my_package_api/: index.rst
docs/source/releases/latest/: 29-plugins-with-capital-letters-do-not-install-correctly.yaml  initial-commit.yaml
docs/source/userguide/: index.rst  template_instructions.rst
geoips_avris_ng/: __init__.py
geoips_avris_ng/plugins/modules/algorithms/: general_band_synthesis.py
geoips_avris_ng/plugins/modules/interpolators/: 1d_gaussian.py  gaussian_1d.py
geoips_avris_ng/plugins/modules/readers/: avris-ng.py  avris_ng.py  srf.py
geoips_avris_ng/plugins/yaml-based/sectors/: aviris_ng_2017_03_21.yaml
my_package/plugins/modules/algorithms/: pmw_89test.py
tests/: test_all.sh
tests/scripts/: amsr2.global_clean.89-PCT-Using-Product-Defaults.sh  amsr2.tc_clean.89-PCT-Fully-Specified.sh  test_config.sh
tests/unit_tests/: test_gaussian_1d.py
viz/: AVIRIS-Plots.ipynb  Untitled.ipynb  jupyter_helpers.py
