[tool.poetry]
name = "geoips_avris_ng" # package available at the root of the project
version = "0.0.0"
description = "GeoIPS Plugins for working with hyperspectral imagery from AVIRIS-NG collected during ABoVE airborne campaigns"
authors = ["Gwyn Uttmark <biosafetylevel5@gmail.com>"]
repository = "https://github.com/biosafetylvl5/geoips-avris-ng"
readme = "README.md"
keywords = []
license = ""
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
#documentation = "set the url"
include = ["**/*.txt", "**/*.py", "**/*.yaml"]
packages = [{include = "geoips_avris_ng"}]

# uses current version .postN and not incrementing
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = false # don't include local-version hash; date doesn't appear by deafult
style = "pep440" # pep440 is default; can rmeove later on; used for : keeping 0.0.8 as the default install until 0.0.9 is out
#style = "semver"
#tag-branch = "feature-poetry"
strict = false
pattern = "(?x)^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

[tool.poetry-dynamic-versioning.substitution]
files = ["*/_version.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"                          # object used to perform the build process

[tool.poetry.dependencies] # Include any python dependencies here
python = ">=3.11.0" # mandatory to declare the required python version
geoips = { git = "https://github.com/NRLMMD-GEOIPS/geoips.git"}
gdal = "*"
numpy = "*"
seaborn = "*"
pandas = "*"


[tool.poetry.extras]
doc = [
    "sphinx",                    # for docs buildin
    "sphinxcontrib-runcmd",      # for docs buildin
    "sphinxcontrib-napoleon",    # for docs buildin
    "sphinx-argparse",           # for docs buildin
    "pinkrst",                   # for rst formatting
    "doc8",                      # for rst linting
    "brassy",                    # for changelog rendering
    "pre-commit"
]

lint = [
    "pinkrst",                   # for rst auto-formatting
    "doc8",                      # for rst linting
    "prettier",                  # YAML, JSON linting
    "ruff",                      # Python linting
    "mypy",                      # Type checking
]

test = [
    "pytest",                    # for running tests
    "pytest-cov",                # for test coverage
    "pytest-xdist",              # for parallel testing
]

jupyter = [
    "jupyterlab",
    "notebook"
]

[tool.poetry.plugins."geoips.plugin_packages"]
# @ Update with your package name, ie:
# @ "@package@" = "@package@"
"geoips_avris_ng" = "geoips_avris_ng"
